feat: Migra todo o projeto para o banco de dados Mongo DB - Cria a conexão com o banco novo - Cria schema dos clientes - Altera os métodos de get, post e delete adaptados para o Mongo

--- a/package.json
+++ b/package.json
@@ -8,19 +8,24 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/joseisaacpy/controle-clientes.git"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/joseisaacpy/controle-clientes/issues"
+  },
+  "homepage": "https://github.com/joseisaacpy/controle-clientes#readme",
   "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
-    "mysql": "^2.18.1",
-    "mysql2": "^3.14.1"
-  },
-  "devDependencies": {
-    "nodemon": "^3.1.10"
+    "mongoose": "^8.15.2",
+    "path": "^0.12.7"
   }
 }
